# CMake-Template

./: CMakeLists.txt  README.md
cmake/: paths.cmake
docs/: vcpkg.md
include/core/: core.h
scripts/: build.bat  build.sh
src/: main.cpp
src/core/: CMakeLists.txt  core.cpp
